Some Chnages in the frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -235,7 +235,7 @@
 <body>
     <div class="container">
         <h1>LeetCode Problem Fetcher</h1>
-        <input type="text" id="questionId" placeholder="Enter questionFrontendId" />
+        <input type="text" id="questionId" placeholder="Enter Leetcode Question No." />
         <button onclick="fetchProblem()">Fetch Problem</button>
         <div id="problemDetails"></div>
     </div>
